# app/Models/Order.php
@@ -8,7 +8,14 @@ use Illuminate\Database\Eloquent\Model;
 class Order extends Model
 {
     use HasFactory;
-
+    protected $fillable = [
+        'user_id',
+        'quantity',
+        'price',
+        'total_price',
+        'transaction',
+        'status_id',
+    ];
     public function user()
     {
         return $this->belongsTo(User::class , 'user_id');
